# naujas

./: 0-2.cpp  ProjectSetup2.0.msi  README.md  failoFun.cpp  failoFun.hpp  fun.cpp  fun.hpp  lib.hpp  libraries.hpp  main.cpp  makefile  math.cpp  math.hpp  newFile.cpp  newFile.hpp  programSetup.msi  smegeniai.txt  struct.hpp  strukturos.hpp  v0_1uzd2.cpp  v0_1uzd2Vector.cpp
Desktop/2.0/: CMakeLists.txt
Desktop/2.0/code/: besmegeniai.txt  fun.hpp  genFile.txt  main.cpp  makefile  math.cpp  smegeniai.txt
Desktop/2.0/test/: CMakeLists.txt
Naujas2.0/: CMakeLists.txt
Naujas2.0/code/: besmegeniai.txt  fun.cpp  lib.hpp  main.cpp  makefile  math.hpp  smegeniai.txt  struct.cpp  struct.hpp
Naujas2.0/test/: Tests.cpp
antraUzd-0.5-deque/: fun.hpp  main.cpp  makefile
antraUzd-0.5-deque-1/: fun.cpp  main.cpp
antraUzd-0.5-deque-2/: fun.cpp  genFile.txt  lib.hpp  smegeniai.txt
antraUzd-0.5-list/: README.md  main.cpp  smegeniai.txt
antraUzd-0.5-list-1/: fun.cpp
antraUzd-0.5-list-2/: fun.cpp  fun.hpp  lib.hpp  main.cpp  newFile.cpp  struct.hpp
antraUzd-0.5-vector-2/: besmegeniai.txt  fun.cpp
doxygenKatalogas/: Doxyfile
doxygenKatalogas/html/: annotated.html  classes.html  classstudento_st-members.html  classstudento_st.html  classzmogus-members.html  classzmogus.html  files.html  fun_8hpp_source.html  hierarchy.html  index.html  lib_8hpp_source.html  math_8hpp_source.html  md__r_e_a_d_m_e.html  pages.html  (+1 more)
v1.1-class/: fun.cpp  fun.hpp  genFile.txt  main.cpp  math.cpp  math.hpp  struct.hpp
v1.1-struct/: besmegeniai.txt  fun.hpp  main.cpp  newFile.hpp
(+15 files in other folders)
